src/test/resources/purescript_examples/passing/2136.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' \n  ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSIfThenElseImpl(IfThenElse)
              PsiElement(if)('if')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSParensImpl(Parens)
                    PsiElement(()('(')
                    PSValueImpl(Value)
                      PSPrefixValueImpl(PrefixValue)
                        PSVarImpl(Var)
                          PSProperNameImpl(Qualified)
                            PSIdentifierImpl(identifier)
                              PsiElement(identifier)('negate')
                              PsiElement(whitespace)(' ')
                        PSParensImpl(Parens)
                          PsiElement(()('(')
                          PSValueImpl(Value)
                            PSPrefixValueImpl(PrefixValue)
                              PSVarImpl(Var)
                                PSProperNameImpl(Qualified)
                                  PSIdentifierImpl(identifier)
                                    PsiElement(identifier)('bottom')
                                    PsiElement(whitespace)(' ')
                              PsiElement(::)('::')
                              PsiElement(whitespace)(' ')
                              PSTypeImpl(Type)
                                PSTypeAtomImpl(TypeAtom)
                                  PSIdentifierImpl(TypeConstructor)
                                    PSProperNameImpl(Qualified)
                                      PSProperNameImpl(ProperName)
                                        PsiElement(proper name)('Int')
                          PsiElement())(')')
                          PsiElement(whitespace)(' ')
                      PSIdentInfixImpl(IdentInfix)
                        PSProperNameImpl(Qualified)
                          PsiElement(operator)('>')
                          PsiElement(whitespace)(' ')
                      PSValueImpl(Value)
                        PSPrefixValueImpl(PrefixValue)
                          PSVarImpl(Var)
                            PSProperNameImpl(Qualified)
                              PSIdentifierImpl(identifier)
                                PsiElement(identifier)('top')
                    PsiElement())(')')
                    PsiElement(whitespace)('\n    ')
              PsiElement(then)('then')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSProperNameImpl(Qualified)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('log')
                        PsiElement(whitespace)(' ')
                  PSStringLiteralImpl(StringLiteral)
                    PsiElement(string)('"Fail"')
                    PsiElement(whitespace)('\n    ')
              PsiElement(else)('else')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSProperNameImpl(Qualified)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('log')
                        PsiElement(whitespace)(' ')
                  PSStringLiteralImpl(StringLiteral)
                    PsiElement(string)('"Done"')
                    PsiElement(whitespace)('\n')
